# src/app/api/models.ts
@@ -23,6 +23,7 @@ export { PostResponse } from './models/post-response';
 export { RegisterRequest } from './models/register-request';
 export { TwitCreatedRespose } from './models/twit-created-respose';
 export { TwitCreateRequest } from './models/twit-create-request';
+export { UpdateUserRequest } from './models/update-user-request';
 export { UserCountResponse } from './models/user-count-response';
 export { UserPostResponse } from './models/user-post-response';
 export { UserResponse } from './models/user-response';
