# src/app/api/models/update-user-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UpdateUserRequest {
+  bio?: string;
+  email?: string;
+  firstName?: string;
+  lastName?: string;
+  photo?: string;
+}
